--- a/SquadApplication/ViewCustom/ParticipantsPage.xaml
+++ b/SquadApplication/ViewCustom/ParticipantsPage.xaml
@@ -58,7 +58,8 @@
                                         <Label x:Name="isStaffed" Text="{Binding Path=_isStaffed}" TextColor="White" FontSize="20"/>
                                 </HorizontalStackLayout>
                                 </VerticalStackLayout>
-                                <Button Text="❌" Margin="100,10,0,10" WidthRequest="100" Command="{Binding DeletePlayerCommand}" />
+                                <Button Text="⟰" Margin="100,10,0,10" WidthRequest="50" Command="{Binding PromoteAPlayerCommand}" CommandParameter="{Binding .}"/>
+                                <Button Text="⟱" Margin="100,10,0,10" WidthRequest="50" Command="{Binding DemoteAPlayerCommand}" CommandParameter="{Binding .}" />
                             </HorizontalStackLayout>
                     </Border>                    
                 </DataTemplate>
