--- a/SquadApplication/ViewCustom/PolygonsPage.xaml
+++ b/SquadApplication/ViewCustom/PolygonsPage.xaml
@@ -43,19 +43,62 @@
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
                             <Border
-                           Stroke="DarkKhaki"
-                           StrokeShape="1"
+                        BackgroundColor="#90509040"
+                        Stroke="#b3c96b"
+                        StrokeThickness="2"
+                        StrokeDashArray="4,2"
+                        StrokeShape="0"
+                        Padding="10"
+                        Opacity="0.7"
                                      >
-                                <StackLayout
-                                       VerticalOptions="Center"
-                                       HorizontalOptions="Center">
-                                    <Label Text="{Binding Path=Id}" TextColor="White"/>
-                                    <Label Text="{Binding Path=Name}" TextColor="White"/>
-                                    <Label Text="{Binding Path=Coordinates}" TextColor="White"/>
-                                    <Button Text="Delete" Command="{Binding DeletePolygonCommand}"/>
-                                </StackLayout>
+                                
+                                    <VerticalStackLayout
+                                        HorizontalOptions="Fill"
+                                        >
+                                        <HorizontalStackLayout>
+                                            <Label Text="Id Полигона  : " FontSize="17" TextColor="White"/>
+                                            <Label Text="{Binding Path=Id}" FontSize="17" TextColor="AliceBlue" />
+                                        </HorizontalStackLayout>
+                                        <HorizontalStackLayout>
+                                            <Label Text="Название Полигона  : " FontSize="17" TextColor="White"/>
+                                            <Label Text="{Binding Path=Name}" FontSize="17" TextColor="White"/>
+                                        </HorizontalStackLayout>
+                                        <HorizontalStackLayout>
+                                            <Label Text="Координаты Полигона  : " FontSize="17" TextColor="White"/>
+                                            <Label MaximumWidthRequest="200" Text="{Binding Path=Coordinates}" FontSize="17" TextColor="White"/>
+                                        </HorizontalStackLayout>
+                                       
+                                            
+                                            <Grid ColumnDefinitions="*,*" Margin="5">
+                                                <Border
+                                                     Stroke="GreenYellow"
+                                                     StrokeThickness="1"
+                                                     Padding="2"
+                                                    HorizontalOptions="Start"
+                                                    Grid.Column="0"
+                                                    >
+                                                    <Button Text="Delete" WidthRequest="150" Command="{Binding DeletePolygonCommand}" />
+                                                </Border>
+                                                
+                                                <Border
+                                                    Stroke="GreenYellow"
+                                                    StrokeThickness="1"
+                                                    Padding="2"
+                                                    HorizontalOptions="End"
+                                                    Grid.Column="1">
+                                                    <Button Text="Copy Coordinates" WidthRequest="150" Command="{Binding CopyCoordinatesCommand}" />
+                                                </Border>
+
+                                            </Grid>
+                                                
+                                       
+                                            
+                                    </VerticalStackLayout>
+                               
+                                
                             </Border>
                         </DataTemplate>
+                                        
                     </CollectionView.ItemTemplate>
                 </CollectionView>
             </StackLayout>
