--- a/SquadApplication/ViewCustom/RentalsPage.xaml
+++ b/SquadApplication/ViewCustom/RentalsPage.xaml
@@ -13,7 +13,7 @@
             <StackLayout >
                 <Button 
                 BackgroundColor="DarkGreen"
-                Command="{Binding AppendRentailCommand}"
+                Command="{Binding CreateRentalCommand}"
                 Text="Add Rentail">
                     <Button.Triggers>
                         <DataTrigger
